--- a/metav/index.html
+++ b/metav/index.html
@@ -37,7 +37,7 @@
             </div>
         </header>
         <div class="main">
-            <!-- <div class="main__decor"></div> -->
+           
             <div class="main__container">
                 <div class="main__decor"></div>
                 <section class="page-home">
@@ -66,7 +66,7 @@
                             <div class="page-home__item-achivments">
                                 <div class="page-home__num">
                                     <h4>
-                                        29K+
+                                        <span class="page-home__num--zero">0</span>K+
                                     </h4>
                                 </div>
                                 <div class="page-home__name-achivments paragraph">
@@ -76,7 +76,7 @@
                             <div class="page-home__item-achivments">
                                 <div class="page-home__num">
                                     <h4>
-                                        29K+
+                                        <span class="page-home__num--one">0</span>K+
                                     </h4>
                                 </div>
                                 <div class="page-home__name-achivments paragraph">
@@ -86,7 +86,7 @@
                             <div class="page-home__item-achivments">
                                 <div class="page-home__num">
                                     <h4>
-                                        29K+
+                                        <span class="page-home__num--two">29</span>K+
                                     </h4>
                                 </div>
                                 <div class="page-home__name-achivments paragraph">
@@ -136,7 +136,7 @@
                     </div>
                 </section>
                 <section class="page-func">
-                    <div class="page-func__text">
+                    <div class="page-func__text page-func__text--anim">
                         <div class="page-func__title">
                             <h2>
                                 How does the <span>Metaverse work</span>
