--- a/metav/index.html
+++ b/metav/index.html
@@ -45,8 +45,8 @@
                     <div class="page-home__left-content">
                         <div class="page-home__title">
                             <h1>
-                                <!-- Explore the future of the <span>Metaverse</span> -->
-                                QQ VALENTY <span>SQUAD</span>
+                                Explore the future of the <span>Metaverse</span>
+                                
                             </h1>
                         </div>
                         <div class="page-home__paragraph">
