--- a/metav/index.html
+++ b/metav/index.html
@@ -45,7 +45,7 @@
                     <div class="page-home__left-content">
                         <div class="page-home__title">
                             <h1>
-                                Explore the future of the <span>Metaverse</span>
+                                Explore the future  the <span>Metaverse</span>
                                 
                             </h1>
                         </div>
