--- a/SaulDesign/SaulDesign/index.html
+++ b/SaulDesign/SaulDesign/index.html
@@ -41,14 +41,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="home__design">
+                    <!-- <div class="home__design">
                         <div class="home__doodle">
                             <img src="img/main/homePage/doodlesHome.svg" alt="doodle">
                         </div>
                         <div class="home__man">
                             <img src="img/main/homePage/manHome.svg" alt="man">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </main>
